@@ -14,6 +14,7 @@
 #include "include/private/SkTo.h"
 #include "src/core/SkAntiRun.h"
 #include "src/core/SkArenaAlloc.h"
+#include "src/core/SkColorSpacePriv.h"
 #include "src/core/SkMask.h"
 #include "src/core/SkMaskFilterBase.h"
 #include "src/core/SkPaintPriv.h"
@@ -717,6 +718,17 @@ SkBlitter* SkBlitter::Choose(const SkPixmap& device,
         p->setBlendMode(SkBlendMode::kSrc);
         p->setColor(0x00000000);
     }
+
+#ifndef SK_SUPPORT_LEGACY_COLORFILTER_NO_SHADER
+    if (paint->getColorFilter() && !paint->getShader()) {
+        // apply the filter to the paint's color, and then remove the filter
+        auto dstCS = device.colorSpace();
+        SkPaint* p = paint.writable();
+        p->setColor(p->getColorFilter()->filterColor4f(p->getColor4f(), sk_srgb_singleton(), dstCS),
+                    dstCS);
+        p->setColorFilter(nullptr);
+    }
+#endif
 
     if (drawCoverage) {
         if (device.colorType() == kAlpha_8_SkColorType) {
